@@ -59,6 +59,8 @@ Fixes:
    (get box's 2nd thing). Reported by israphel.
  * Many more messages generated by the server have been 
    marked as translatable. By Stoko.
+ * 'No such file' messages were logged by mistake when connect_file and
+   similar options were set to a dbref/attr. Reported by Zalethon. [MG]
 
 Version 1.8.3 patchlevel 11                     Jan 01, 2010
 
